--- a/src/index.css
+++ b/src/index.css
@@ -4,5 +4,18 @@
 }
 th,td{
     padding: 10px;
-    border: 1px solid #ddd;
+    border: 3px solid #222222 ;
+    border-radius: 5px;
+    transition: all 0.5s ease;
+    
+}
+
+th:hover,td:hover{
+    background-color: #222222;
+    color: #fff;
+}
+table{
+    border: 3px solid #222222 ; 
+    border-radius: 5px;
+    overflow: hidden;
 }
