--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,6 @@
 @import "tailwindcss";
+@config "../tailwind.config.js";
+
 *{
     font-family: 'Comfortaa', serif;
 }
@@ -7,7 +9,8 @@ th,td{
     border: 3px solid #222222 ;
     border-radius: 5px;
     transition: all 0.5s ease;
-    
+    font-size: 20px;
+font-weight: 800;
 }
 
 th:hover,td:hover{
